# hand2notes

./: .gitignore  CLAUDE.md  README.md  REQUIREMENTS.md  pyproject.toml  run.sh
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
apps/electron-ui/: .eslintrc.json  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
apps/electron-ui/src/main/: file-picker.ts  index.ts  tray.ts
apps/electron-ui/src/preload/: index.ts
apps/python-api/: alembic.ini  pyproject.toml
apps/python-api/migrations/: env.py
apps/python-api/migrations/versions/: 001_initial_schema.py
apps/python-api/src/hand2notes/adapters/: __init__.py
apps/python-api/src/hand2notes/api/: __init__.py  __main__.py  config_service.py  main.py  middleware.py
apps/python-api/src/hand2notes/api/routers/: __init__.py  config.py  pipeline.py  sessions.py
apps/python-api/src/hand2notes/pipeline/: __init__.py  metrics.py  orchestrator.py
docs/: architecture.md  monorepo-structure.md
inputs/transformation_digital/: page_1_processed.md
scripts/: process_pages.py
specs/001-handwritten-to-obsidian/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-handwritten-to-obsidian/checklists/: requirements.md
specs/001-handwritten-to-obsidian/contracts/: config-api.md  pipeline-api.md  session-api.md
specs/004-diagram-detection/: spec.md
specs/004-diagram-detection/checklists/: quality.md  requirements.md
tests/: conftest.py  test_block_merger.py  test_content_classifier.py  test_golden_page1.py  test_markdown_renderer.py  test_mermaid_diagrams.py  test_pipeline_integration.py  test_pipeline_metrics.py  test_preprocessing.py  test_vlm_blocks_parser.py  test_vlm_postprocess.py
tests/golden/: README.md
(+37 files in other folders)
