[project]
name = "hand2notes-api"
version = "0.1.0"
description = "FastAPI backend for the hand2notes pipeline"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "sqlmodel>=0.0.21",
    "alembic>=1.13",
    "python-multipart>=0.0.9",
    "hand2notes-core-models",
    "hand2notes-storage",
    "hand2notes-ingestion",
    "hand2notes-preprocessing",
    "hand2notes-layout",
    "hand2notes-ocr",
    "hand2notes-tables",
    "hand2notes-diagrams",
    "hand2notes-markdown-export",
    "hand2notes-review",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hand2notes"]
